# Rusty-Cleaner

./: Cargo.toml  LICENSE  README.md
src/: build.rs
src/windows/: cleaner.rs  main.rs
